src/App.css
@font-face {
   font-family: General;
   src: url("./Text Files/GeosansLight.ttf");
}

@font-face {
   font-family: Accent;
   src: url("./Text Files/Cecilia.otf");
}

.App {
  text-align: center;
  width: 60%;
  margin-bottom: 100px;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

.navbar {
   border-top: 1px solid black;
   border-bottom: 1px solid black;
   margin-bottom: 50px;
   margin-top: 50px;

}

.logo-img{

   margin-top: 50px;
   width: auto;
   height: auto;
   max-width: 100%;

}

.nav-link{
   color: black;
   font-family: Accent;
   font-weight: bold;
   font-size: 20px;
}

.nav-link:hover{
   color: gray;
}

.character-img{
   height:25%;
   width: 100%;
   padding: 5px;
}

.character-card{
   width: 275px;
   height: 25%;
   padding: 0px;
   border-radius: 0;
   border: none;
}

.character-card-deck{
   align-items: center;
   align-content: center;
   text-align: center;
   display: flex;
   justify-content: center;
}

.enviro-img {
   height: 250px;
   width: 100%;
   padding: 5px;
   object-fit: cover;
}

.enviro-img-large {
   height: 500px;
   width: 100%;
   padding: 5px;
   object-fit: cover;
}

.enviro-card{
   width: 100%;
   height: 250px;
   padding: 0px;
   border-radius: 0;
   border: none;
}

.enviro-card-large {
   width: 100%;
   height: 500px;
   padding: 0px;
   border-radius: 0;
   border: none;
}

.enviro-card-deck{
   align-items: center;
   align-content: center;
   text-align: center;
   display: flex;
   justify-content: center;
}

.grid-button {
   padding: 0px;
   border: none;
}

.grid-button:hover{
   opacity: 0.7;
}

.grid-button:active{
   box-shadow: none !important;
   border: none;
}

.grid-button:focus{
   box-shadow: none;
}

.modal-mod {
   border: none !important;
}

.modal-body-mod {
   max-height: calc(100vh - 250px);
   overflow-y:auto;
   align-items: center;
   text-align: center;
   background-color: white;
   border: none;
   display: inline-block;
}

.modal-header {
   font-weight: bold !important;
   font-size: 100px !important;
   border: none;
}

.modal-footer-mod {
   border: none;
   font-size: 16px;
   text-align: center !important;
}

.modal-img {
   max-height: calc(100vh - 300px);
}

.enviro-modal-img {
   max-width: calc(70vw - 100px);
   max-height: calc(100vh - 300px);

}

.enviro-modal-mod {
   border: none !important;
   max-width: 80vw !important;
   width: 70vw;
   margin: auto;
}

.close-button{
   width: 30px;
   height: 30px;
   background-color: white;
   border: none;
   align-items: center;
}

.close-button:hover{
   background: white;
}

.close-img{
   width: 30x;
   height: 30px;
   object-fit: cover;
}

.footer-text{
   text-align: center !important;
   font-family: General;
   font-size: 20px;

}

.header-text{
   font-family: Accent;
   font-size: 40px;

}

.about-img{

   width: 100%;
   object-fit: cover;
   margin-bottom: 20px;

}

.about-text{
   font-family: General;
   font-size: 20px;
   max-width: 600px;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
}

.embed-container {
   position: relative;
   padding-bottom: 56.25%;
   height: 0; overflow: hidden;
   max-width: 100%;
   height: auto;
}

.embed-container iframe, .embed-container object, .embed-container embed {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

